# airplay-rs

./: CODE_OF_CONDUCT.md  Cargo.toml  README.md
examples/: discover.rs
src/: client.rs  discovery.rs  lib.rs
